--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,13 +1,15 @@
 <div class="container mx-auto p-4 sm:p-8">
     <h1 class="text-4xl sm:text-5xl font-extrabold text-center text-gray-800 mb-6 sm:mb-8 relative">
-        <span *ngIf="!editingTitle" (click)="toggleEditTitle()"
-            class="cursor-pointer hover:text-blue-600 transition-colors duration-300">
-            Project: {{ project.Title }}
-        </span>
-        <input *ngIf="editingTitle" type="text" [(ngModel)]="project.Title" (blur)="saveTitle(project.Title)"
+        @if (editingTitle) {
+        <input *ngIf="editingTitle" type="text" [(ngModel)]="project.Title" (blur)="saveTitle(project?.Title)"
             class="border-2 border-gray-300 rounded-lg p-2 w-full sm:w-auto">
-        <span class="absolute top-0 right-0 text-gray-500 text-xs sm:text-sm p-2">
-            {{ project.createdDate | date:'MMMM d, y' }}
+        }@else {
+        <span (click)="toggleEditTitle()" class="cursor-pointer hover:text-blue-600 transition-colors duration-300">
+            Project: {{ project?.Title }}
+        </span>
+        }
+        <span *ngIf="project" class="absolute top-0 right-0 text-gray-500 text-xs sm:text-sm p-2">
+            {{ project['createdDate'] | date:'MMMM d, y' }}
         </span>
     </h1>
     <div class="flex items-center justify-between mb-6 sm:mb-8">
@@ -24,11 +26,10 @@
                 Todos
             </h2>
             <button
-                class="text-white bg-green-600 hover:bg-green-700 px-4 py-2 rounded-lg shadow-lg mb-6 transition-transform transform hover:scale-105 duration-200"
-                >
+                class="text-white bg-green-600 hover:bg-green-700 px-4 py-2 rounded-lg shadow-lg mb-6 transition-transform transform hover:scale-105 duration-200" (click)="openDialog()">
                 Add Todo
             </button>
-            <ul class="space-y-4 sm:space-y-6">
+            <ul *ngIf="project&&project['ListTodos']" class="space-y-4 sm:space-y-6">
                 <li *ngFor="let todo of project['ListTodos']; let i = index"
                     class="p-4 bg-gray-50 rounded-lg shadow-md transition-transform transform hover:scale-102 hover:shadow-lg hover:shadow-blue-300/50 duration-300">
                     <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
@@ -48,7 +49,7 @@
                                     <option [ngValue]="true">COMPLETE</option>
                                     <option [ngValue]="false">PENDING</option>
                                 </select>
-                                <button (click)="saveTodo(i, todo.Description, todo.Status)"
+                                <button  (click)="saveTodo(todo._id, todo.Description, todo.Status)"
                                     class="text-white bg-blue-600 hover:bg-blue-700 px-3 py-1 rounded-lg shadow-lg transition-transform transform hover:scale-105 duration-200">Save</button>
                             </div>
                         </div>
