--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -26,7 +26,8 @@
                 Todos
             </h2>
             <button
-                class="text-white bg-green-600 hover:bg-green-700 px-4 py-2 rounded-lg shadow-lg mb-6 transition-transform transform hover:scale-105 duration-200" (click)="openDialog()">
+                class="text-white bg-green-600 hover:bg-green-700 px-4 py-2 rounded-lg shadow-lg mb-6 transition-transform transform hover:scale-105 duration-200"
+                (click)="openDialog()">
                 Add Todo
             </button>
             <ul *ngIf="project&&project['ListTodos']" class="space-y-4 sm:space-y-6">
@@ -44,13 +45,18 @@
                             <div *ngIf="editingTodoIndex === i">
                                 <input type="text" [(ngModel)]="todo.Description"
                                     class="border-2 border-gray-300 rounded-lg p-2 mr-2 w-full sm:w-auto mb-2 sm:mb-0">
+                                
                                 <select [(ngModel)]="todo.Status"
                                     class="border-2 border-gray-300 rounded-lg p-2 w-full sm:w-auto mb-2 sm:mb-0">
                                     <option [ngValue]="true">COMPLETE</option>
                                     <option [ngValue]="false">PENDING</option>
                                 </select>
-                                <button  (click)="saveTodo(todo._id, todo.Description, todo.Status)"
+                                <button (click)="saveTodo(todo._id, todo.Description, todo.Status)"
                                     class="text-white bg-blue-600 hover:bg-blue-700 px-3 py-1 rounded-lg shadow-lg transition-transform transform hover:scale-105 duration-200">Save</button>
+                                    <button (click)="remove(todo._id)"
+                                    class=" ml-2 px-3 py-1 rounded-full text-sm sm:text-base font-semibold bg-red-200 text-red-800">
+                                    Remove
+                                    </button>
                             </div>
                         </div>
                         <div class="flex items-center">
