--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -30,6 +30,11 @@
                 (click)="openDialog()">
                 Add Todo
             </button>
+            <button
+                class="text-white right-4 absolute bg-green-600 hover:bg-green-700 px-4 py-2 rounded-lg shadow-lg mb-6 transition-transform transform hover:scale-105 duration-200"
+                (click)="export()">
+               Gist Export
+            </button>
             <ul *ngIf="project&&project['ListTodos']" class="space-y-4 sm:space-y-6">
                 <li *ngFor="let todo of project['ListTodos']; let i = index"
                     class="p-4 bg-gray-50 rounded-lg shadow-md transition-transform transform hover:scale-102 hover:shadow-lg hover:shadow-blue-300/50 duration-300">
